mongodb environment vars

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BASE_URL=http://localhost:8080
-MONGODB_URI=mongodb://localhost:27017/localdb
-
+MONGODB_URI=mongodb://root:cool123@ds253203.mlab.com:53203/devload
+ENV=PRODUCTION
 SESSION_SECRET=123ABC123
