--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ BASE_URL=http://localhost:8080
 MONGODB_URI=mongodb://root:cool123@ds253203.mlab.com:53203/devload
 ENV=PRODUCTION
 SESSION_SECRET=123ABC123
-SITEURL=localhost:8080
+SITEURL=devload.herokuapp.com
