--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-BASE_URL=http://candyfiles.herokuapp.com
-MONGODB_URI=mongodb://root:cool123@ds253203.mlab.com:53203/devload
+BASE_URL=http://localhost:8080
+MONGODB_URI=mongodb://root:cool123@ds225294.mlab.com:25294/heroku_d1ngzkbt
+
 ENV=PRODUCTION
 SESSION_SECRET=123ABC123
-SITEURL=http://candyfiles.herokuapp.com
+SITEURL=http://localhost:8080
+PUBLISHABLE_KEY=pk_test_3VSYWB8HlTqaYUtohpD2d1UX
+SECRET_KEY=sk_test_Q8jFNHG4y3zqkk9PPghhr9zf
