--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "node-sass": "^4.9.3",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.7",
+    "openssl": "^1.1.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
@@ -66,7 +68,7 @@
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "shortid": "^2.2.14",
-    "stripe": "^6.10.0",
+    "stripe": "^6.17.0",
     "tumblr.js": "^2.0.0",
     "twilio": "^3.19.2",
     "twit": "^2.2.11",
